# copilot-sandbox-container

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  README.md  biome.jsonc  deny.toml  renovate.json5
.github/: hooks  linter-service.yaml  linters.json  zizmor.yml
.github/hooks/: hooks.json
.github/hooks/postToolUse/: README.md  linters.json  main.mjs  main.test.mjs
.github/skills/containerized-yamllint-ops/: SKILL.md
.github/skills/containerized-yamllint-ops/scripts/: podman-yamllint.sh
.github/skills/pr-fix-workflow/: SKILL.md
.github/skills/pr-fix-workflow/references/: validation-and-delivery.md
.github/skills/skill-creator/scripts/: package_skill.py
.github/workflows/: control-plane-ci.yml
agent-skills/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md
agent-skills/hooks/postToolUse/: main.mjs  main.test.mjs
agent-skills/hooks/postToolUse/lib/: incremental-files.mjs
agent-skills/skills/git-commit/: SKILL.md
agent-skills/skills/pr-fix-workflow/: SKILL.md
agent-skills/skills/pr-fix-workflow/references/: validation-and-delivery.md
containers/control-plane/: .dockerignore  Cargo.toml  Dockerfile
containers/control-plane/agents/: architecture-review-agent.agent.md  change-review-agent.agent.md  implementation-agent.agent.md  kiss-dry-review-agent.agent.md  pre-implementation-design-agent.agent.md  review-coordinator-agent.agent.md  security-review-agent.agent.md  solid-review-agent.agent.md
containers/control-plane/config/: anthropic-skills.ref  external-skills.yaml  profile-control-plane-env.sh  profile-control-plane-session.sh  screenrc  sshd_config  storage.conf
containers/control-plane/exec-api/: Cargo.toml  build.rs
containers/control-plane/exec-api/proto/: control_plane_exec.proto
containers/control-plane/exec-api/src/: bootstrap.rs  command.rs  config.rs  git_hooks.rs  lib.rs  logging.rs  main.rs  mounts.rs  packages.rs  paths.rs  remote_home.rs  server.rs  service.rs  test_support.rs
containers/control-plane/exec-api/tests/: integration.rs
containers/control-plane/exec-policy-preload/: Cargo.toml
containers/control-plane/exec-policy-preload/src/: command.rs  config.rs  git.rs  hook.rs  lib.rs  policy.rs  shell.rs
containers/control-plane/hooks/: hooks.json
containers/control-plane/hooks/audit/: README.md  main.mjs  main.test.mjs
containers/control-plane/hooks/auditAnalysis/: README.md  main.mjs
containers/control-plane/runtime-tools/: Cargo.toml
containers/control-plane/runtime-tools/src/: audit.rs  cleanup.rs  error.rs  exec_forward.rs  git.rs  install_skills.rs  invocation.rs  k8s_job.rs  lib.rs  main.rs  session_exec.rs  session_exec_command.rs  support.rs  test_support.rs
containers/control-plane/runtime-tools/src/audit/: database.rs  event.rs  mod.rs  redaction.rs
containers/control-plane/runtime-tools/src/exec_forward/: tests.rs
containers/control-plane/runtime-tools/src/k8s_job/: args.rs  kube_ops.rs  mod.rs
containers/control-plane/runtime-tools/src/post_tool_use/: config.rs  executor.rs  git.rs  mod.rs  pipeline.rs  state.rs
containers/control-plane/runtime-tools/src/session_exec_command/: args.rs  config.rs  kube.rs  manifest.rs  mod.rs  state.rs
containers/control-plane/runtime-tools/tests/: post_tool_use.rs
containers/control-plane/web/: Cargo.toml  deny.exceptions.toml
containers/control-plane/web-backend/: Cargo.toml
containers/control-plane/web-backend/src/: main.rs
containers/control-plane/web-backend/src/application/: mod.rs  ports.rs  use_cases.rs
containers/control-plane/web-backend/src/domain/: chat.rs
containers/control-plane/web-backend/src/infrastructure/: acp_gateway.rs  mod.rs
containers/control-plane/web-backend/src/presentation/: http.rs
containers/control-plane/web-frontend/: Cargo.toml  Trunk.toml  index.html
containers/control-plane/web-frontend/src/: main.rs  virtual_list.rs
containers/control-plane/web/src/: main.rs
containers/exec-pod/: Dockerfile
containers/execution-plane-go/: Dockerfile
containers/execution-plane-node/: Dockerfile
containers/execution-plane-python/: Dockerfile
containers/execution-plane-rust/: Dockerfile
containers/execution-plane-smoke/: Dockerfile  execution-plane-smoke
containers/garage/: Dockerfile  entrypoint.sh
containers/garage-bootstrap/: Dockerfile  bootstrap.py
containers/hadolint/: Dockerfile
containers/sccache/: Dockerfile
containers/sccache-dist/: Dockerfile  entrypoint-dist.sh
containers/yamllint/: Dockerfile
deploy/helm/control-plane/: Chart.yaml  README.md  values.yaml
deploy/kubernetes/: README.md  control-plane.example.yaml
deploy/kubernetes/control-plane.example/: kustomization.yaml
docs/: README.md  kubernetes-deployment.md  requirements.md
docs/explanation/: acp-web-cli-architecture.md  history.md  knowledge.md
docs/how-to-guides/: cookbook.md
docs/reference/: control-plane-runtime.md  debug-log.md  orchestrator-basic-design.md  orchestrator-requirements.md  orchestrator-screen-design.md
docs/tutorials/: first-deployment.md
scripts/: build-test.sh  ci-changes-require-build.sh  fetch-anthropic-skills.sh  install-git-skill.sh  install-git-skills-from-manifest.sh  lib-biome-hook-image.sh  lib-bundled-agents.sh  lib-container-toolchain.sh  lint.sh  load-kind-images.sh  prepare-dhi-images.sh  test-audit-analysis.sh  test-audit-logging.sh  test-bundled-agents.sh  test-ci-workflow-parallelization.sh  test-config-injection.sh  test-current-cluster-regressions.sh  test-dockerfile-hardening.sh  test-entrypoint-capabilities.sh  test-garage-bootstrap.sh  test-github-hooks.sh  test-helm-chart.sh  test-image-maintenance.sh  test-job-transfer.sh  test-k8s-job-sccache-pvc.sh  test-k8s-job-script-paths.sh  test-k8s-job-wait.sh  test-k8s-job.sh  test-k8s-rust-s3-backend.sh  test-k8s-rust-sccache-dist.sh  test-k8s-sample-podman-storage.sh  test-k8s-sample-storage-layout.sh  test-kind-image-loading.sh  test-kind-prereqs.sh  test-kind.sh  test-podman-startup.sh  test-pr-fix-workflow-skill.sh  test-pre-tool-use-policy.sh  test-regressions.sh  test-renovate-config-permissions.sh  (+7 more)
(+100 files in other folders)
