[package]
name = "control-plane-exec-api"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
base64 = "=0.22.1"
libc = "=0.2.186"
nix = { version = "=0.31.2", features = ["fs", "mount", "process", "user"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.52.1", features = [
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "time",
] }
tokio-stream = { version = "=0.1.18", features = ["net"] }
tonic = { version = "=0.14.5", features = ["transport"] }
tonic-health = "=0.14.5"
tonic-prost = "=0.14.5"
prost = "=0.14.3"

[build-dependencies]
protoc-bin-vendored = "=3.2.0"
tonic-prost-build = "=0.14.5"

[dev-dependencies]
tempfile = "=3.27.0"
