[package]
name = "control-plane-exec-api"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
base64 = "=0.22.1"
h2 = "=0.4.15"
http = "=1.4.2"
hyper = { version = "=1.10.1", features = ["http2", "server"] }
hyper-util = { version = "=0.1.20", features = [
  "server-auto",
  "service",
  "tokio",
] }
libc = "=0.2.186"
nix = { version = "=0.31.3", features = ["fs", "mount", "process", "user"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.53.0", features = [
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tonic = { version = "=0.14.6", features = ["transport"] }
tonic-health = "=0.14.6"
tonic-prost = "=0.14.6"
prost = "=0.14.4"
tower = "=0.5.3"

[build-dependencies]
protoc-bin-vendored = "=3.2.0"
tonic-prost-build = "=0.14.6"

[dev-dependencies]
tempfile = "=3.27.0"
