[package]
name = "control-plane-exec-policy-preload"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
name = "control_plane_exec_policy"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "=0.2.183"
regex = "=1.12.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_norway = "=0.9.42"
