[package]
name = "control-plane-exec-policy-preload"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
name = "control_plane_exec_policy"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "=0.2.186"
regex = "=1.13.1"
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
serde_norway = "=0.9.42"
