[package]
name = "control-plane-runtime-tools"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[[bin]]
name = "control-plane-runtime-tool"
path = "src/main.rs"

[dependencies]
base64 = "=0.22.1"
libc = "=0.2.183"
regex = "=1.12.2"
rusqlite = { version = "=0.37.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_yaml = "=0.9.34"
tempfile = "=3.23.0"
