[package]
name = "control-plane-runtime-tools"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[[bin]]
name = "control-plane-runtime-tool"
path = "src/main.rs"

[dependencies]
base64 = "=0.22.1"
control-plane-exec-api = { path = "../exec-api" }
futures-util = "=0.3.33"
git2 = { version = "=0.21.0", features = [
  "https",
  "vendored-libgit2",
  "vendored-openssl",
] }
k8s-openapi = { version = "=0.27.1", default-features = false, features = [
  "latest",
] }
kube = "=3.1.0"
libc = "=0.2.189"
regex = "=1.13.1"
rusqlite = { version = "=0.40.1", features = ["bundled"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
serde_yaml = "=0.9.34"
sha2 = "=0.11.0"
tempfile = "=3.27.0"
tokio = { version = "=1.53.1", features = ["net", "rt", "sync", "time"] }
url = "=2.5.8"
uuid = { version = "=1.24.0", features = ["v4"] }
