[package]
name = "control-plane-web-backend"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
agent-client-protocol = "=0.10.4"
async-trait = "=0.1.89"
axum = "=0.8.8"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.48.0", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
] }
tokio-util = { version = "=0.7.18", features = ["compat"] }
tower-http = { version = "=0.6.8", features = ["fs"] }

