[package]
name = "control-plane-web-frontend"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
console_error_panic_hook = "=0.1.7"
gloo-net = "=0.7.0"
leptos = { version = "=0.8.17", features = ["csr"] }
serde = { version = "=1.0.228", features = ["derive"] }
wasm-bindgen = "=0.2.118"
web-sys = { version = "=0.3.95", features = [
  "Event",
  "EventTarget",
  "HtmlElement",
  "SubmitEvent",
] }
